--- a/.gitignore
+++ b/.gitignore
@@ -2,25 +2,51 @@
 .RData
 .Rhistory
 .Rproj.user/
+*.Rproj.user
 
 # History files
 .Rapp.history
 
 # Session Data files
+.RData
 .RDataTmp
 
 # User-specific files
 .Ruserdata
 
+# RStudio files
+.Rproj.user/
+
 # OAuth2 token
 .httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# pkgdown site
+docs/
 
 # MacOS
 .DS_Store
 
 # Windows
 Thumbs.db
+ehthumbs.db
+Desktop.ini
 
 # IDE
 .vscode/
 .idea/
+
+# Outputs (optional - uncomment if you want to exclude analysis outputs)
+# *.pdf
+# *.png
+# *.jpg
